--- a/02_Convolutional_Neural_Network.ipynb
+++ b/02_Convolutional_Neural_Network.ipynb
@@ -285,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "클래스 레이블은 One-Hot로 인코딩됩니다. 즉, 각 레이블은 하나의 요소를 제외하고 모두 0 인 요소가 포함 된 10개의 벡터입니다. 이 요소의 색인은 클래스 번호, 즉 연관된 이미지에 표시된 숫자입니다. 테스트 집합에 대한 클래스 수를 정수로 필요로 하므로 지금 계산합니다."
+    "클래스 레이블은 One-Hot로 인코딩 됩니다. 즉, 각 레이블은 하나의 요소를 제외하고 모두 0 인 요소가 포함 된 10개의 벡터입니다. 이 요소의 색인은 클래스 번호, 즉 연관된 이미지에 표시된 숫자입니다. 테스트 집합에 대한 클래스 수를 정수로 필요로 하므로 지금 계산합니다."
    ]
   },
   {
@@ -739,7 +739,9 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y_true_cls = tf.argmax(y_true, axis=1)"
@@ -861,7 +863,9 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "layer_flat, num_features = flatten_layer(layer_conv2)"
@@ -1042,7 +1046,9 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y_pred_cls = tf.argmax(y_pred, axis=1)"
@@ -1088,7 +1094,9 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cost = tf.reduce_mean(cross_entropy)"
@@ -1205,7 +1213,9 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "session.run(tf.global_variables_initializer())"
@@ -1248,7 +1258,9 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Counter for total number of iterations performed so far.\n",
@@ -1314,7 +1326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "잘못 분류 된 테스트 세트의 이미지 예제를 플로팅하는 기능."
+    "잘못 분류 된 테스트 세트의 이미지 예제를 출력하는 함수"
    ]
   },
   {
@@ -1421,7 +1433,9 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Split the test-set into smaller batches of this size.\n",
@@ -2339,7 +2353,9 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This has been commented out in case you want to modify and experiment\n",
