--- a/02_Convolutional_Neural_Network.ipynb
+++ b/02_Convolutional_Neural_Network.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# TensorFlow 강좌 #02\n",
-    "# Convolutional Neural Network (콘볼루션 신경망)\n",
+    "# Convolutional Neural Network (컨볼루션 신경망)\n",
     "\n",
     "원저자 [Magnus Erik Hvass Pedersen](http://www.hvass-labs.org/)\n",
     "/ [GitHub](https://github.com/Hvass-Labs/TensorFlow-Tutorials) / [Videos on YouTube](https://www.youtube.com/playlist?list=PL9Hr9sNUjfsmEu1ZniY0XpHSzl5uihcXZ) / 번역 곽병권"
@@ -19,9 +19,9 @@
     "\n",
     "이전의 튜토리얼에서는 간단한 선형 모델이 MNIST 데이터 세트에서 손으로 쓴 숫자를 인식하는 데 약 91%의 분류 정확도를 가짐을 보여주었습니다.\n",
     "\n",
-    "이 튜토리얼에서는 제안 된 연습 문제 중 일부를 수행 할 경우 약 99% 이상의 분류 정확도를 갖는 간단한 콘볼루션 신경망(Convolutional Neural Network)를 TensorFlow로 구현합니다.\n",
+    "이 튜토리얼에서는 제안 된 연습 문제 중 일부를 수행 할 경우 약 99% 이상의 분류 정확도를 갖는 간단한 컨볼루션 신경망(Convolutional Neural Network)를 TensorFlow로 구현합니다.\n",
     "\n",
-    "콘볼루션 신경망은 입력 이미지에 대해서 작은 필터를 움직여 작동합니다. 이는 필터가 전체 입력 이미지에서 패턴을 인식하는데 반복해서 사용됨을 의미합니다. 이 방법은 컨볼루션 네트워크를 동일한 수의 변수를 사용하는 완전 연결 네트워크보다 훨씬 강력하게 만듭니다. 작은 필터는 네트워크를 더 빠르게 훈련시킵니다.\n",
+    "컨볼루션 신경망은 입력 이미지에 대해서 작은 필터를 움직여 작동합니다. 이는 필터가 전체 입력 이미지에서 패턴을 인식하는데 반복해서 사용됨을 의미합니다. 이 방법은 컨볼루션 네트워크를 동일한 수의 변수를 사용하는 완전 연결 네트워크보다 훨씬 강력하게 만듭니다. 작은 필터는 네트워크를 더 빠르게 훈련시킵니다.\n",
     "\n",
     "기본 선형 대수학, 파이썬 및 Jupyter Notebook 편집기에 익숙해야합니다. 1장을 아직 보지 않았다면, 1장을 보시고 오기를 추천합니다."
    ]
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "다음 차트는 아래에 구현 된 Convolutional Neural Network의 데이터 흐름을 대략적으로 보여줍니다."
+    "다음 차트는 아래에 구현 된 컨볼루션 신경망의 데이터 흐름을 대략적으로 보여줍니다."
    ]
   },
   {
@@ -68,13 +68,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "입력 이미지는 필터 웨이트를 사용하여 첫 번째 콘볼루션 레이어에서 처리됩니다. 결과적으로 16 개의 새로운 이미지가 생성되며, 하나는 콘볼루션 레이어의 각 필터에 해당합니다. 이미지는 또한 다운 샘플링되므로 이미지 해상도가 28x28에서 14x14로 감소합니다.\n",
+    "입력 이미지는 필터 웨이트를 사용하여 첫 번째 컨볼루션 레이어에서 처리됩니다. 결과적으로 16 개의 새로운 이미지가 생성되며, 하나는 컨볼루션 레이어의 각 필터에 해당합니다. 이미지는 또한 다운 샘플링되므로 이미지 해상도가 28x28에서 14x14로 감소합니다.\n",
     "\n",
-    "이 16 개의 작은 이미지는 두 번째 콘볼루션 레이어에서 처리됩니다. 이 16 개의 채널마다 필터 가중치가 필요하며 이 레이어의 각 출력 채널에 대해 필터 가중치가 필요합니다. 36 개의 출력 채널이 있으므로 두 번째 콘볼루션 레이어에는 총 16 x 36 = 576 개의 필터가 있습니다. 결과 이미지는 다시 7x7 픽셀로 다운 샘플링됩니다.\n",
+    "이 16 개의 작은 이미지는 두 번째 컨볼루션 레이어에서 처리됩니다. 이 16 개의 채널마다 필터 가중치가 필요하며 이 레이어의 각 출력 채널에 대해 필터 가중치가 필요합니다. 36 개의 출력 채널이 있으므로 두 번째 컨볼루션 레이어에는 총 16 x 36 = 576 개의 필터가 있습니다. 결과 이미지는 다시 7x7 픽셀로 다운 샘플링됩니다.\n",
     "\n",
-    "두번째 Convolution layer의 출력은 각각 7x7 픽셀의 36장의 이미지가 됩니다. 그런 다음 길이가 7 x 7 x 36 = 1764 인 단일 벡터로 평탄화되며, 이는 128 개의 뉴런이 있는 완전 연결된 레이어의 입력으로 사용됩니다. 이것은 이미지의 클래스, 즉 어떤 숫자가 이미지에 묘사되어 있는지를 결정하는 데 사용되는 각 클래스에 하나씩, 10 개의 뉴런을 가진 완전히 연결된 또 다른 레이어로 공급됩니다.\n",
+    "두번째 컨볼루션 레이어의 출력은 각각 7x7 픽셀의 36장의 이미지가 됩니다. 그런 다음 길이가 7 x 7 x 36 = 1764 인 단일 벡터로 평탄화되며, 이는 128 개의 뉴런이 있는 완전 연결된 레이어의 입력으로 사용됩니다. 이것은 이미지의 클래스, 즉 어떤 숫자가 이미지에 묘사되어 있는지를 결정하는 데 사용되는 각 클래스에 하나씩, 10 개의 뉴런을 가진 완전히 연결된 또 다른 레이어로 공급됩니다.\n",
     "\n",
-    "컨벌루션 필터는 처음에 무작위로 선택되므로 분류가 무작위로 수행됩니다. 입력 이미지의 예측 클래스와 참 클래스 간의 오차는 소위 교차 엔트로피 (cross-entropy)로 측정됩니다. 그런 다음 옵티마이저가 미분의 체인 규칙을 사용하여 콘볼루션 네트워크를 통해, 이 오류를 자동으로 전파하고 분류 오류를 개선하기 위해 필터 가중치를 업데이트합니다. 이것은 분류 오류가 충분히 낮을 때까지 반복적으로 수천 번 반복됩니다.\n",
+    "컨볼루션 필터는 처음에 무작위로 선택되므로 분류가 무작위로 수행됩니다. 입력 이미지의 예측 클래스와 참 클래스 간의 오차는 소위 교차 엔트로피 (cross-entropy)로 측정됩니다. 그런 다음 옵티마이저가 미분의 체인 규칙을 사용하여 컨볼루션 네트워크를 통해, 이 오류를 자동으로 전파하고 분류 오류를 개선하기 위해 필터 가중치를 업데이트합니다. 이것은 분류 오류가 충분히 낮을 때까지 반복적으로 수천 번 반복됩니다.\n",
     "\n",
     "이 특정 필터 가중치와 중간 이미지는 한 번의 최적화 실행 결과이며이 노트북을 다시 실행하면 다르게 보일 수 있습니다.\n",
     "\n",
@@ -85,14 +85,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 콘볼루션 레이어 (Convolution Layer)"
+    "## 컨볼루션 레이어 (Convolution Layer)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "다음 차트는 첫 번째 콘볼루션 레이어에서 이미지를 처리하는 기본적인 아이디어를 보여줍니다. 입력 이미지는 숫자 7을 나타내며 이미지 사본 4 개가 여기에 표시되므로 필터가 이미지의 다른 위치로 어떻게 이동되고 있는지 명확하게 볼 수 있습니다. 필터의 각 위치에 대해, 필터와 필터 아래의 이미지 픽셀간에 내적이 계산되므로 출력 이미지에 단일 픽셀이 생성됩니다. 따라서 전체 입력 이미지에서 필터를 이동하면 새로운 이미지가 생성됩니다.\n",
+    "다음 차트는 첫 번째 컨볼루션 레이어에서 이미지를 처리하는 기본적인 아이디어를 보여줍니다. 입력 이미지는 숫자 7을 나타내며 이미지 사본 4 개가 여기에 표시되므로 필터가 이미지의 다른 위치로 어떻게 이동되고 있는지 명확하게 볼 수 있습니다. 필터의 각 위치에 대해, 필터와 필터 아래의 이미지 픽셀간에 내적이 계산되므로 출력 이미지에 단일 픽셀이 생성됩니다. 따라서 전체 입력 이미지에서 필터를 이동하면 새로운 이미지가 생성됩니다.\n",
     "\n",
     "적색 필터 가중치는 필터가 입력 이미지의 검은 픽셀에 대해 긍정적 인 반응을 나타내지 만 파란색 픽셀은 필터가 검은 픽셀에 대해 부정적인 반응을한다는 것을 의미합니다.\n",
     "\n",
@@ -130,9 +130,9 @@
     "\n",
     "필터가 입력 이미지의 오른쪽과 하단의 끝에 도달하면 0으로 채워질 수 있습니다 (흰색 픽셀). 이렇게 하면 출력 이미지가 입력 이미지와 정확히 동일한 차원이됩니다.\n",
     "\n",
-    "또한, 콘볼루션의 출력은 음의 값이 0으로 설정되기 때문에 출력이 양수임을 보장하는 소위 정류 선형 유닛 (ReLU)을 통과 할 수 있습니다. 출력은 2x2 픽셀의 작은 창을 고려하고 가장 큰 픽셀 만 유지하는 소위 최대 풀링 (max-pooling)에 의해 다운 샘플링 될 수 도 있습니다. 이것은 입력 이미지의 해상도를 반으로 낮추어 줍니다. 즉, 28x28에서 14x14 픽셀로 다운샘플링이 이루어지게 됩니다.\n",
+    "또한, 컨볼루션의 출력은 음의 값이 0으로 설정되기 때문에 출력이 양수임을 보장하는 소위 정류 선형 유닛 (ReLU)을 통과 할 수 있습니다. 출력은 2x2 픽셀의 작은 창을 고려하고 가장 큰 픽셀 만 유지하는 소위 최대 풀링 (max-pooling)에 의해 다운 샘플링 될 수 도 있습니다. 이것은 입력 이미지의 해상도를 반으로 낮추어 줍니다. 즉, 28x28에서 14x14 픽셀로 다운샘플링이 이루어지게 됩니다.\n",
     "\n",
-    "두 번째 콘볼루션 계층은 16 개의 입력 채널을 필요로하므로 더 복잡합니다. 각 입력 채널에 대해 별도의 필터가 필요하기 때문에 하나의 필터 대신 16 개의 필터가 필요합니다. 더불어서, 두 번째 콘볼루션 계층에서 36 개의 출력 채널을 원하기 때문에 두 번째 콘볼루션 계층에는 16 x 36 = 576 필터가 필요합니다. 이것이 내부적으로 어떻게 작동하는지 이해하는 것은 다소 어려울 수 있습니다."
+    "두 번째 컨볼루션 계층은 16 개의 입력 채널을 필요로하므로 더 복잡합니다. 각 입력 채널에 대해 별도의 필터가 필요하기 때문에 하나의 필터 대신 16 개의 필터가 필요합니다. 더불어서, 두 번째 컨볼루션 계층에서 36 개의 출력 채널을 원하기 때문에 두 번째 콘볼루션 계층에는 16 x 36 = 576 필터가 필요합니다. 이것이 내부적으로 어떻게 작동하는지 이해하는 것은 다소 어려울 수 있습니다."
    ]
   },
   {
@@ -193,7 +193,7 @@
    "source": [
     "## 신경망의 구성\n",
     "\n",
-    "콘볼루션 신경망의 구성은 편의상 여기에 정의되어 있으므로, 아래에서 숫자들을 쉽게 찾고 변경할 수 있으며 노트북을 다시 실행할 수 있습니다."
+    "컨볼루션 신경망의 구성은 편의상 여기에 정의되어 있으므로, 아래에서 숫자들을 쉽게 찾고 변경할 수 있으며 노트북을 다시 실행할 수 있습니다."
    ]
   },
   {
@@ -586,7 +586,7 @@
    "source": [
     "### 레이어를 펴주는 도움 함수\n",
     "\n",
-    "콘볼루션 계층은 4차원의 출력 텐서를 생성합니다. 우리는 콘볼루션 레이어 다음에 완전히 연결된 레이어를 추가 할 것이므로 완전 연결 레이어의 입력으로 사용할 수있도록 4차원 텐서를 2차원으로 줄여야합니다."
+    "컨볼루션 계층은 4차원의 출력 텐서를 생성합니다. 우리는 콘볼루션 레이어 다음에 완전히 연결된 레이어를 추가 할 것이므로 완전 연결 레이어의 입력으로 사용할 수있도록 4차원 텐서를 2차원으로 줄여야합니다."
    ]
   },
   {
@@ -751,9 +751,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 콘볼루션 레이어 1\n",
+    "### 컨볼루션 레이어 1\n",
     "\n",
-    "첫 번째 콘볼루션 레이어를 만듭니다. `x_image`를 입력으로 취해서 `filter_size1`과 같은 폭과 높이를 가진 `num_filters1`개의 다른 필터를 만듭니다. 마지막으로 2x2 max-pooling을 사용하여 이미지의 절반 크기가 되도록 이미지를 다운 샘플링 합니다."
+    "첫 번째 컨볼루션 레이어를 만듭니다. `x_image`를 입력으로 취해서 `filter_size1`과 같은 폭과 높이를 가진 `num_filters1`개의 다른 필터를 만듭니다. 마지막으로 2x2 max-pooling을 사용하여 이미지의 절반 크기가 되도록 이미지를 다운 샘플링 합니다."
    ]
   },
   {
@@ -776,7 +776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "콘볼루션 층에 의해 출력 될 텐서의 모양을 확인하십시오. 출력될 형태는 (?, 14, 14, 16)입니다. 즉, 복수의 이미지를 처리할 것이며, 각 이미지는 가로 14 픽셀, 세로 14 픽셀이며 16 개의 다른 채널을 갖게 되고, 16장의 필터가 존재함을 의미합니다."
+    "컨볼루션 층에 의해 출력 될 텐서의 모양을 확인하십시오. 출력될 형태는 (?, 14, 14, 16)입니다. 즉, 복수의 이미지를 처리할 것이며, 각 이미지는 가로 14 픽셀, 세로 14 픽셀이며 16 개의 다른 채널을 갖게 되고, 16장의 필터가 존재함을 의미합니다."
    ]
   },
   {
@@ -803,9 +803,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 콘볼루션 레이어 2\n",
+    "### 컨볼루션 레이어 2\n",
     "\n",
-    "첫 번째 컨벌루션 레이어의 출력을 입력으로 받는 두 번째 컨벌루션 레이어를 만듭니다. 입력 채널들의 수는 제 1 콘벌 루션 층의 필터들의 수에 대응 합니다."
+    "첫 번째 컨볼루션 레이어의 출력을 입력으로 받는 두 번째 컨볼루션 레이어를 만듭니다. 입력 채널들의 수는 제 1 컨볼루션 층의 필터들의 수에 대응 합니다."
    ]
   },
   {
@@ -828,7 +828,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "이 콘볼루션 층에서 출력 될 텐서의 모양을 확인하십시오. 모양은 (?, 7, 7, 36) 입니다. 다시 말하면, 각 이미지의 너비와 높이가 7 픽셀 인 임의의 수의 이미지가 있고, 36개의 채널에 해당하는 필터가 있음을 의미합니다."
+    "이 컨볼루션 층에서 출력 될 텐서의 모양을 확인하십시오. 모양은 (?, 7, 7, 36) 입니다. 다시 말하면, 각 이미지의 너비와 높이가 7 픽셀 인 임의의 수의 이미지가 있고, 36개의 채널에 해당하는 필터가 있음을 의미합니다."
    ]
   },
   {
@@ -857,7 +857,7 @@
    "source": [
     "### 평면화 레이어 (Flatten Layer)\n",
     "\n",
-    "컨볼 루션 계층은 4 차원 텐서를 출력합니다. 우리는 이제 완전히 연결된 네트워크에 이를 입력으로 사용하고자 합니다.이 네트워크에서는 텐서가 2 차원 텐서로 재구성되거나 평면화 되어야 합니다."
+    "컨볼루션 계층은 4 차원 텐서를 출력합니다. 우리는 이제 완전히 연결된 네트워크에 이를 입력으로 사용하고자 합니다.이 네트워크에서는 텐서가 2 차원 텐서로 재구성되거나 평면화 되어야 합니다."
    ]
   },
   {
@@ -922,9 +922,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fully-Connected Layer 1\n",
+    "### 완전 연결 레이어 (Fully-Connected Layer) 1\n",
     "\n",
-    "완전히 연결된 레이어를 네트워크에 추가합니다. 입력은 이전 콘볼루션의 평면화된 레이어입니다. 완전히 연결된 레이어의 뉴런이나 노드의 수는 `fc_size`입니다. ReLU는 비선형 관계를 배울 수 있도록 사용됩니다."
+    "완전히 연결된 레이어를 네트워크에 추가합니다. 입력은 이전 컨볼루션의 평면화된 레이어입니다. 완전히 연결된 레이어의 뉴런이나 노드의 수는 `fc_size`입니다. ReLU는 비선형 관계를 배울 수 있도록 사용됩니다."
    ]
   },
   {
@@ -972,7 +972,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fully-Connected Layer 2\n",
+    "### 완전 연결 레이어 (Fully-Connected Layer) 2\n",
     "\n",
     "입력 이미지가 속하는 클래스 10 개를 결정하기 위해 길이가 10 인 벡터를 출력하는 완전히 연결된 레이어를 추가합니다. ReLU는 이 계층에서 사용되지 않습니다."
    ]
@@ -1885,14 +1885,14 @@
    "source": [
     "## 가중치와 레이어의 시각화\n",
     "\n",
-    "콘볼루션 신경망이 왜 손글씨 숫자를 잘 인식 할 수 있는지 이해하기 위해 콘볼루션 필터와 결과 출력 이미지의 가중치를 시각화해 보겠습니다."
+    "컨볼루션 신경망이 왜 손글씨 숫자를 잘 인식 할 수 있는지 이해하기 위해 컨볼루션 필터와 결과 출력 이미지의 가중치를 시각화해 보겠습니다."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 콘볼루션 레이어의 가중치를 시각화 하기 위한 도움 함수"
+    "### 컨볼루션 레이어의 가중치를 시각화 하기 위한 도움 함수"
    ]
   },
   {
@@ -1953,7 +1953,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 콘볼루션 레이어의 출력을 표시하기 위한 도움 함수"
+    "### 컨볼루션 레이어의 출력을 표시하기 위한 도움 함수"
    ]
   },
   {
@@ -2099,14 +2099,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 콘볼루션 레이어 1"
+    "### 컨볼루션 레이어 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "이제 첫 번째 콘볼루션 레이어에 대한 필터 가중치를 표시합니다.\n",
+    "이제 첫 번째 컨볼루션 레이어에 대한 필터 가중치를 표시합니다.\n",
     "\n",
     "양의 가중치는 빨간색이고 음수 가중치는 파란색입니다."
    ]
@@ -2209,9 +2209,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "이제 두 번째 컨벌루션 레이어에 대한 필터 가중치를 그립니다.\n",
+    "이제 두 번째 컨볼루션 레이어에 대한 필터 가중치를 그립니다.\n",
     "\n",
-    "첫 번째 콘볼루션 레이어에는 16 개의 출력 채널이 있으며 이는 두 번째 컨볼루션 레이어에 16 개의 입력 채널이 있음을 의미합니다. 두 번째 컨볼루션 레이어에는 각 입력 채널에 대한 일련의 필터 가중치가 있습니다. 우리는 첫 번째 채널에 대해 필터 웨이츠를 표시해 보겠습니다.\n",
+    "첫 번째 컨볼루션 레이어에는 16 개의 출력 채널이 있으며 이는 두 번째 컨볼루션 레이어에 16 개의 입력 채널이 있음을 의미합니다. 두 번째 컨볼루션 레이어에는 각 입력 채널에 대한 일련의 필터 가중치가 있습니다. 우리는 첫 번째 채널에 대해 필터 웨이츠를 표시해 보겠습니다.\n",
     "\n",
     "양의 가중치는 빨간색이고 음수 가중치는 파란색입니다."
    ]
