--- a/03C_Keras_API.ipynb
+++ b/03C_Keras_API.ipynb
@@ -1135,6 +1135,7 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1697,7 +1698,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras import backend as K"
@@ -1880,8 +1883,8 @@
     "* 레이어의 매개 변수를 변경합니다 (예: 커널, 깊이, 크기 등 시간 사용 및 분류 정확도의 차이점은 무엇입니까?\n",
     "* 컨볼루션 네트워크와 완전히 연결된 레이어를 각각 추가해보고 제거해 보세요.\n",
     "* 여전히 성능이 잘 나오는 가장 단순한 네트워크는 무엇입니까?\n",
-    "* 기능 모델을 변경하여 완전 연결 레이어로 들어가기 전에 기존의 컨볼루션 네트워크와 병렬로 연결되는 다른 컨볼루션 레이어를 만들어 보세요.\n",
-    "* 기능 모델을 변경하여 예측 클래스를 One-Hot 인코딩 배열과 정수로 출력하도록 변경하여 나중에 numpy.argmax()를 사용할 필요가 없도록 만들어 봅니다.\n",
+    "* 모델을 변경하여 완전 연결 레이어로 들어가기 전에 기존의 컨볼루션 네트워크와 병렬로 연결되는 다른 컨볼루션 레이어를 만들어 보세요.\n",
+    "* 모델을 변경하여 예측 클래스를 One-Hot 인코딩 배열과 정수로 출력하도록 변경하여 나중에 numpy.argmax()를 사용할 필요가 없도록 만들어 봅니다.\n",
     "* 이 소스 코드를 너무 많이 보지 않고 직접 프로그램을 다시 제작하십시오.\n",
     "* 프로그램이 어떻게 작동하는지 동료에게 설명하십시오."
    ]
