Korean Translation - Proof reading

--- a/01_Simple_Linear_Model.ipynb
+++ b/01_Simple_Linear_Model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TensorFlow 강좌 #01\n",
+    "# TensorFlow 튜토리얼 #01\n",
     "# Simple Linear Model\n",
     "\n",
     "원저자 [Magnus Erik Hvass Pedersen](http://www.hvass-labs.org/)\n",
@@ -17,7 +17,7 @@
    "source": [
     "## 개요\n",
     "\n",
-    "이 노트북은 간단한 선형 모델로 TensorFlow를 사용하는 기본 워크플로우를 보여줍니다. 많이 알려진 MNIST 데이터 세트에 수작업으로 작성된 숫자의 이미지를 로드 한 후 TensorFlow에서 간단한 수학 모델을 정의하고 최적화합니다. 그 결과를 플롯하고 설명합니다.\n",
+    "이 노트북은 간단한 선형 모델로 TensorFlow를 사용하는 기본 워크플로우를 보여줍니다. 많이 알려진 MNIST 데이터 세트에 손글씨로 작성된 숫자의 이미지를 로드 한 후 TensorFlow에서 간단한 수학 모델을 정의하고 최적화합니다. 그 결과를 시각화하고 설명합니다.\n",
     "\n",
     "기본 선형대수, 파이썬 및 Jupyter Notebook 편집기에 익숙해야합니다. 또한 머신러닝 및 분류에 대한 기본적인 지식이 있으면 많은 도움이 됩니다."
    ]
