--- a/02_Convolutional_Neural_Network.ipynb
+++ b/02_Convolutional_Neural_Network.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TensorFlow 강좌 #02\n",
+    "# TensorFlow 튜토리얼 #02\n",
     "# Convolutional Neural Network (컨볼루션 신경망)\n",
     "\n",
     "원저자 [Magnus Erik Hvass Pedersen](http://www.hvass-labs.org/)\n",
@@ -17,14 +17,23 @@
    "source": [
     "## 개요\n",
     "\n",
-    "이전의 튜토리얼에서는 간단한 선형 모델이 MNIST 데이터 세트에서 손으로 쓴 숫자를 인식하는 데 약 91%의 분류 정확도를 가짐을 보여주었습니다.\n",
+    "이전의 튜토리얼에서는 간단한 선형 모델로 MNIST 데이터 세트에서 손으로 쓴 숫자를 인식하는 데 약 91%의 분류 정확도를 보여주었습니다.\n",
     "\n",
-    "이 튜토리얼에서는 제안 된 연습 문제 중 일부를 수행 할 경우 약 99% 이상의 분류 정확도를 갖는 간단한 컨볼루션 신경망(Convolutional Neural Network)를 TensorFlow로 구현합니다.\n",
+    "이 튜토리얼에서는 제안 된 연습 문제 중 일부를 수행 할 경우 약 99% 이상의 분류 정확도가 가능한 간단한 컨볼루션 신경망(Convolutional Neural Network)을 TensorFlow로 구현합니다.\n",
     "\n",
     "컨볼루션 신경망은 입력 이미지에 대해서 작은 필터를 움직여 작동합니다. 이는 필터가 전체 입력 이미지에서 패턴을 인식하는데 반복해서 사용됨을 의미합니다. 이 방법은 컨볼루션 네트워크를 동일한 수의 변수를 사용하는 완전 연결 네트워크보다 훨씬 강력하게 만듭니다. 작은 필터는 네트워크를 더 빠르게 훈련시킵니다.\n",
     "\n",
     "기본 선형 대수학, 파이썬 및 Jupyter Notebook 편집기에 익숙해야합니다. 1장을 아직 보지 않았다면, 1장을 보시고 오기를 추천합니다."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
