--- a/03C_Keras_API.ipynb
+++ b/03C_Keras_API.ipynb
@@ -17,13 +17,13 @@
    "source": [
     "## 개요\n",
     "\n",
-    "튜토리얼 # 02에서는 TensorFlow에서 컨볼루션 신경망을 구현하는 방법을 보여주었습니다. 우리는 네트워크에서 레이어를 만들기 위한 몇 가지 도움 기능을 만들었습니다. 복잡한 모델을 훨씬 쉽게 구현하고 오류 위험을 낮추기 때문에 우수한 고급 API를 갖추는 것이 중요합니다.\n",
+    "튜토리얼 #02에서는 TensorFlow를 이용하여 컨볼루션 신경망을 구현하는 방법을 보여주었습니다. 우리는 네트워크에서 레이어를 만들기 위한 몇 가지 도움 기능을 만들었습니다. 복잡한 모델을 훨씬 쉽게 구현하고 오류 위험을 낮추기 때문에 우수한 고급 API를 사용하는 것은 매우 중요합니다.\n",
     "\n",
-    "TensorFlow에는 PrettyTensor (Tutorial # 03), Layers API (Tutorial # 03-B) 및 기타 여러 빌더 API가 있습니다. 그러나 그들은 실제로 끝나지 않았으며 이제는 개발자들에 의해 다소 포기 된 것 처럼 보입니다.\n",
+    "TensorFlow에는 PrettyTensor (Tutorial #03), Layers API (Tutorial #03-B) 및 기타 여러 빌더 API가 있습니다. 그러나 그들은 실제로 완성되지 않았으며 일부는 개발자들에 의해 다소 포기 된 것 처럼 보입니다.\n",
     "\n",
     "이 튜토리얼은 Keras API에 대해 다루고 있습니다. Keras API는 이미 매우 훌륭한 문서로 개발되었으며, 개발이 계속됩니다. Keras는 향후 TensorFlow의 표준 API가 될 가능성이 높으므로 다른 API 대신 Keras를 사용하는 것이 좋습니다.\n",
     "\n",
-    "Keras의 저자는 독자가 읽어야하는 API 디자인 철학을 [블로그 - 게시물] (https://blog.keras.io/user-experience-design-for-apis.html) 작성했습니다."
+    "Keras의 저자는 독자가 읽어야하는 API 디자인 철학을 [블로그 - 게시물] (https://blog.keras.io/user-experience-design-for-apis.html) 작성하기도 했습니다."
    ]
   },
   {
