--- a/02_Convolutional_Neural_Network.ipynb
+++ b/02_Convolutional_Neural_Network.ipynb
@@ -1169,7 +1169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "부울 값의 벡터를 부동 소수점 형으로 캐스팅하여 False가 0이되고 True가 1이되도록 분류 정확도를 계산 한 다음 이 수의 평균을 계산합니다."
+    "부울 값의 벡터를 float 형으로 형변환하여 False가 0이되고 True가 1이되도록 분류 정확도를 계산 한 다음 이 수의 평균을 계산합니다."
    ]
   },
   {
@@ -1216,7 +1216,7 @@
    "source": [
     "### 변수 초기화\n",
     "\n",
-    "`weights`와 `biases`의 변수는 최적화를 시작하기 전에 초기화되어야합니다."
+    "`weights`와 `biases`등의 변수는 최적화를 시작하기 전에 초기화되어야합니다."
    ]
   },
   {
