--- a/02_Convolutional_Neural_Network.ipynb
+++ b/02_Convolutional_Neural_Network.ipynb
@@ -27,15 +27,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1169,7 +1160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "부울 값의 벡터를 float 형으로 형변환하여 False가 0이되고 True가 1이되도록 분류 정확도를 계산 한 다음 이 수의 평균을 계산합니다."
+    "부울 값의 벡터를 float 형으로 형변환하여 False가 0이되고 True가 1이 되도록 한 다음 이 수의 평균을 계산하여 분류 정확도를 계산합니다."
    ]
   },
   {
