--- a/03_PrettyTensor.ipynb
+++ b/03_PrettyTensor.ipynb
@@ -906,7 +906,7 @@
     "\n",
     "사용자에게 진행 상황을 표시하기 위해 몇 가지 성능 측정 방법이 필요합니다.\n",
     "\n",
-    "먼저 우리는 신경망의 출력 y_pred로 부터 예측 된 클래스 번호를 계산합니다. y_pred는 10 개의 요소가있는 벡터입니다. 클래스 번호는 가장 큰 요소의 색인입니다."
+    "먼저 우리는 신경망의 출력 y_pred로 부터 예측 된 클래스 번호를 계산합니다. y_pred는 10 개의 요소가 있는 벡터입니다. 클래스 번호는 가장 큰 요소의 색인입니다."
    ]
   },
   {
@@ -989,7 +989,7 @@
    "source": [
     "### 변수 초기화\n",
     "\n",
-    "`weights`와 `biases`등의 변수는 최적화를 시작하기 전에 초기화되어야합니다."
+    "`weights`와 `biases`등의 변수는 최적화를 시작하기 전에 초기화되어야 합니다."
    ]
   },
   {
@@ -1880,39 +1880,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercises\n",
+    "## 연습문제\n",
     "\n",
-    "These are a few suggestions for exercises that may help improve your skills with TensorFlow. It is important to get hands-on experience with TensorFlow in order to learn how to use it properly.\n",
+    "TensorFlow 활용 기술을 향상 시키는데 도움이 될 수 있는 몇 가지 제안 사항입니다. TensorFlow를 제대로 사용하는 방법을 배우려면 실습 경험을 얻는 것이 중요합니다.\n",
     "\n",
-    "You may want to backup this Notebook before making any changes.\n",
+    "변경하기 전에이 노트북을 별도로 백업 하세요.\n",
     "\n",
-    "* Change the activation function to sigmoid for all the layers.\n",
-    "* Use sigmoid in some layers and relu in others. Can you use `defaults_scope` for this?\n",
-    "* Use l2loss in all layers. Then try it for only some of the layers.\n",
-    "* Use PrettyTensor's reshape for `x_image` instead of TensorFlow's. Is one better than the other?\n",
-    "* Add a dropout-layer after the fully-connected layer. If you want a different `keep_prob` during training and testing then you will need a placeholder variable and set it in the feed-dict.\n",
-    "* Replace the 2x2 max-pooling layers with stride=2 in the convolutional layers. Is there a difference in classification accuracy? What if you optimize it again and again? The difference is random, so how would you measure if there really is a difference? What are the pros and cons of using max-pooling vs. stride in the conv-layer?\n",
-    "* Change the parameters for the layers, e.g. the kernel, depth, size, etc. What is the difference in time usage and classification accuracy?\n",
-    "* Add and remove some convolutional and fully-connected layers.\n",
-    "* What is the simplest network you can design that still performs well?\n",
-    "* Retrieve the bias-values for the convolutional layers and print them. See `get_weights_variable()` for inspiration.\n",
-    "* Remake the program yourself without looking too much at this source-code.\n",
-    "* Explain to a friend how the program works."
+    "* 모든 레이어에 대해 활성화 함수를 시그모이드로 변경합니다.\n",
+    "* 일부 레이어에서는 시그모이드를 사용하고 다른 레이어에서는 ReLU를 사용하십시오. 이것을 위해 `defaults_scope`를 사용할 수 있습니까?\n",
+    "* 모든 레이어에서 l2loss를 사용 하십시오. 그런 다음 일부 레이어에만 적용해 보세요.\n",
+    "* TensorFlow 대신 `x_image`를 위해 PrettyTensor의 reshape를 사용하십시오. 둘 사이에 차이가 있습니까?\n",
+    "* 완전히 연결된 레이어 뒤에 드롭아웃 레이어를 추가 합니다. 훈련과 테스트 중에 다른 `keep_prob`을 원한다면 placeholder 변수가 필요하고 feed-dict에 설정해야합니다.\n",
+    "* 컨벌루션 레이어에서 2x2 max-pooling 레이어를 stride = 2로 바꿉니다. 분류 정확도에 차이가 있습니까? 당신이 그것을 계속해서 또 다시 최적화하면 어떨까요? 차이는 무작위 적입니다. 그래서 실제로 차이가 있다면 어떻게 측정합니까? 컨볼루션 레이어에서 max-pooling과 stride의 장점과 단점은 무엇입니까?\n",
+    "* 레이어의 매개 변수를 변경합니다 (예 : 커널, 깊이, 크기 등) 훈련 시간과 분류 정확도의 차이점을 찾으세요.\n",
+    "* 컨볼루션 레이어와 완전히 연결된 레이어를 몇 개 추가해보고 제거해 보세요.\n",
+    "* 여전히 잘 수행 할 수 있는 가장 단순한 네트워크는 무엇입니까?\n",
+    "* 컨볼루션 레이어의 바이어스 값을 검색하여 인쇄합니다. `get_weights_variable()`을 참고하세요.\n",
+    "* 이 소스 코드를 너무 많이 보지 않고 직접 프로그램을 다시 작성하십시오.\n",
+    "* 프로그램이 어떻게 작동하는지 동료에게 설명하십시오."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## License (MIT)\n",
+    "## 라이센스 (MIT)\n",
     "\n",
-    "Copyright (c) 2016 by [Magnus Erik Hvass Pedersen](http://www.hvass-labs.org/)\n",
+    "저작권 (c) 2016 by [Magnus Erik Hvass Pedersen](http://www.hvass-labs.org/)\n",
     "\n",
-    "Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n",
+    "사용, 복사, 수정, 병합 할 수있는 권한을 포함하되 이에 국한되지 않고 소프트웨어를 취급하기 위해이 소프트웨어 및 관련 문서 파일 (이하 \"소프트웨어\")의 사본을 얻는 모든 사람에게 사용 권한이 무료로 부여됩니다 다음 조건에 따라 소프트웨어의 사본을 게시, 배포, 재 라이센스 또는 판매 할 수 있고 소프트웨어를 제공받는 사람에게 허용 할 수 있습니다.\n",
     "\n",
-    "The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n",
+    "위의 저작권 고지 및 이 허가 고지는 소프트웨어의 모든 사본 또는 상당 부분에 포함되어야합니다.\n",
     "\n",
-    "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE."
+    "소프트웨어는 상품성, 특정 목적에의 적합성 및 비 침해에 대한 보증을 포함하여 (단, 이에 한하지 않음) 묵시적이든 명시적이든 어떠한 종류의 보증없이 \"있는 그대로\"제공됩니다. 제작자 또는 저작권 보유자는 소프트웨어 또는 사용과 관련하여 발생했거나 또는 기타 행위로 인해 발생한 청구, 기타 책임에 대해 어떠한 경우에도 책임을지지 않습니다."
    ]
   }
  ],
