--- a/02_Convolutional_Neural_Network.ipynb
+++ b/02_Convolutional_Neural_Network.ipynb
@@ -715,7 +715,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "다음으로 우리는 placeholder `x`에 입력 된 이미지와 관련된 실제 레이블에 대한 placeholder 변수를 갖습니다. 이 placeholder 변수의 모양은`[None, num_classes]`입니다. 이는 임의의 수의 레이블을 보유 할 수 있음을 의미하며 각 레이블은 이 경우에는 길이가 num_classes 인 벡터입니다."
+    "다음으로 우리는 placeholder `x`에 입력 된 이미지와 관련된 실제 레이블에 대한 placeholder 변수를 갖습니다. 이 placeholder 변수의 모양은`[None, num_classes]`입니다. 이는 임의의 수의 레이블을 보유 할 수 있음을 의미하며 각 레이블은 이 경우에는 길이가 `num_classes` 인 벡터입니다."
    ]
   },
   {
@@ -1207,7 +1207,7 @@
    "source": [
     "### 변수 초기화\n",
     "\n",
-    "`weights`와 `biases`등의 변수는 최적화를 시작하기 전에 초기화되어야합니다."
+    "`weights`와 `biases`등의 변수는 최적화를 시작하기 전에 초기화 되어야 합니다."
    ]
   },
   {
