--- a/02_Convolutional_Neural_Network.ipynb
+++ b/02_Convolutional_Neural_Network.ipynb
@@ -1113,7 +1113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "최소화 해야 하는 비용을 알고 있으므로 최적화 도구를 만들 수 있습니다. 이번에는 경사 하강법의 발전된 형식 인 'AdamOptimizer'를 사용하겠습니다.\n",
+    "최소화 해야 하는 비용을 알고 있으므로 최적화 도구를 만들 수 있습니다. 이번에는 경사 하강법의 발전된 형식인 'AdamOptimizer'를 사용하겠습니다.\n",
     "\n",
     "이 시점에서 최적화는 수행되지 않습니다. 사실, 아무것도 계산되지 않습니다. 나중에 실행을 위해 TensorFlow 그래프에 옵티마이저 개체를 추가하기 만하면 됩니다."
    ]
@@ -1252,7 +1252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "점진적으로 네트워크 계층의 변수를 향상시키기 위해 최적화 반복을 수행하는 기능. 각 반복에서 훈련 세트에서 새로운 데이터 배치를 선택한 다음 TensorFlow는 이러한 훈련 샘플을 사용하여 최적화 프로그램을 실행합니다. 진행률은 매 100 회 반복됩니다."
+    "점진적으로 네트워크 계층의 변수를 향상시키기 위해 최적화 반복을 수행하는 기능. 각 반복에서 훈련 세트에서 새로운 데이터 배치를 선택한 다음 TensorFlow는 이러한 훈련 샘플을 사용하여 최적화 프로그램을 실행합니다. 진행률은 매 100회 한번씩 출력합니다."
    ]
   },
   {
