--- a/03B_Layers_API.ipynb
+++ b/03B_Layers_API.ipynb
@@ -398,7 +398,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y_true = tf.placeholder(tf.float32, shape=[None, num_classes], name='y_true')"
@@ -437,6 +439,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -581,7 +584,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "net = tf.layers.max_pooling2d(inputs=net, pool_size=2, strides=2)"
@@ -786,7 +791,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=y_true, logits=logits)"
@@ -976,6 +983,7 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1023,7 +1031,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "session.run(tf.global_variables_initializer())"
@@ -1066,7 +1076,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Counter for total number of iterations performed so far.\n",
@@ -1227,7 +1239,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Split the test-set into smaller batches of this size.\n",
@@ -2117,7 +2131,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This has been commented out in case you want to modify and experiment\n",
@@ -2165,7 +2181,7 @@
    "source": [
     "## 라이센스 (MIT)\n",
     "\n",
-    "저작권 (c) 2016 by [Magnus Erik Hvass Pedersen](http://www.hvass-labs.org/)\n",
+    "저작권 (c) 2017 by [Magnus Erik Hvass Pedersen](http://www.hvass-labs.org/)\n",
     "\n",
     "사용, 복사, 수정, 병합 할 수있는 권한을 포함하되 이에 국한되지 않고 소프트웨어를 취급하기 위해이 소프트웨어 및 관련 문서 파일 (이하 \"소프트웨어\")의 사본을 얻는 모든 사람에게 사용 권한이 무료로 부여됩니다 다음 조건에 따라 소프트웨어의 사본을 게시, 배포, 재 라이센스 또는 판매 할 수 있고 소프트웨어를 제공받는 사람에게 허용 할 수 있습니다.\n",
     "\n",
