--- a/01_Simple_Linear_Model.ipynb
+++ b/01_Simple_Linear_Model.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## 개요\n",
     "\n",
-    "이 노트북은 간단한 선형 모델로 TensorFlow를 사용하는 기본 워크플로우를 보여줍니다. 많이 알려진 MNIST 데이터 세트에 손글씨로 작성된 숫자의 이미지를 로드 한 후 TensorFlow에서 간단한 수학 모델을 정의하고 최적화합니다. 그 결과를 시각화하고 설명합니다.\n",
+    "이 튜토리얼은 간단한 선형 모델로 TensorFlow를 사용하는 기본 워크플로우를 보여줍니다. 많이 알려진 MNIST 데이터 세트에 손글씨로 작성된 숫자의 이미지를 로드 한 후 TensorFlow에서 간단한 수학 모델을 정의하고 최적화합니다. 그 결과를 시각화하고 설명합니다.\n",
     "\n",
     "기본 선형대수, 파이썬 및 Jupyter Notebook 편집기에 익숙해야합니다. 또한 머신러닝 및 분류에 대한 기본적인 지식이 있으면 많은 도움이 됩니다."
    ]
@@ -1337,7 +1337,7 @@
    "source": [
     "## 라이센스 (MIT)\n",
     "\n",
-    "저작권 (c) 2016 by [Magnus Erik Hvass Pedersen](http://www.hvass-labs.org/)\n",
+    "저작권 (c) 2016-2017 by [Magnus Erik Hvass Pedersen](http://www.hvass-labs.org/)\n",
     "\n",
     "사용, 복사, 수정, 병합 할 수있는 권한을 포함하되 이에 국한되지 않고 소프트웨어를 취급하기 위해이 소프트웨어 및 관련 문서 파일 (이하 \"소프트웨어\")의 사본을 얻는 모든 사람에게 사용 권한이 무료로 부여됩니다 다음 조건에 따라 소프트웨어의 사본을 게시, 배포, 재 라이센스 또는 판매 할 수 있고 소프트웨어를 제공받는 사람에게 허용 할 수 있습니다.\n",
     "\n",
