--- a/02_Convolutional_Neural_Network.ipynb
+++ b/02_Convolutional_Neural_Network.ipynb
@@ -2369,7 +2369,7 @@
    "source": [
     "## 결론\n",
     "\n",
-    "컨볼루션 뉴럴 네트워크 (Convolutional Neural Network)는 자습서 #01의 단순 선형 모델보다 손으로 쓴 숫자를 인식하는 데 훨씬 효과적이라는 것을 알았습니다. 컨볼루션 네트워크는 단순 선형 모델의 경우 91% 보다 정확한 약 99% 이상의 분류 정확도를 제공합니다.\n",
+    "컨볼루션 뉴럴 네트워크 (Convolutional Neural Network)는 튜토리얼 #01의 단순 선형 모델보다 손으로 쓴 숫자를 인식하는 데 훨씬 효과적이라는 것을 알았습니다. 컨볼루션 네트워크는 단순 선형 모델의 경우 91% 보다 정확한 약 99% 이상의 분류 정확도를 제공합니다.\n",
     "\n",
     "그러나 컨볼루션 네트워크 (Convolutional Network)는 구현하기가 훨씬 더 복잡하며 필터 가중치 (filter-weights)가 왜 작동하는지, 때로는 실패하는 이유를 보면 분명하지 않습니다.\n",
     "\n",
@@ -2399,7 +2399,7 @@
     "* 컨볼루션 레이어에서 풀링을 사용하지 마십시오. 분류 정확도와 교육 시간이 변경됩니까?\n",
     "* max-pooling 대신에 컨볼루션에서 2x2 stride를 사용해보십시오. 그 차이점은 무엇입니까?\n",
     "* 이 소스 코드를 너무 많이 보지 않고 직접 프로그램을 다시 제작하십시오.\n",
-    "* 프로그램이 어떻게 작동하는지 친구에게 설명하십시오."
+    "* 프로그램이 어떻게 작동하는지 동료에게 설명하십시오."
    ]
   },
   {
@@ -2408,7 +2408,7 @@
    "source": [
     "## 라이센스 (MIT)\n",
     "\n",
-    "저작권 (c) 2017 by [Magnus Erik Hvass Pedersen](http://www.hvass-labs.org/)\n",
+    "저작권 (c) 2016-2017 by [Magnus Erik Hvass Pedersen](http://www.hvass-labs.org/)\n",
     "\n",
     "사용, 복사, 수정, 병합 할 수있는 권한을 포함하되 이에 국한되지 않고 소프트웨어를 취급하기 위해이 소프트웨어 및 관련 문서 파일 (이하 \"소프트웨어\")의 사본을 얻는 모든 사람에게 사용 권한이 무료로 부여됩니다 다음 조건에 따라 소프트웨어의 사본을 게시, 배포, 재 라이센스 또는 판매 할 수 있고 소프트웨어를 제공받는 사람에게 허용 할 수 있습니다.\n",
     "\n",
