--- a/06_CIFAR-10.ipynb
+++ b/06_CIFAR-10.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "이 튜토리얼에서는 CIFAR-10 데이터 세트의 이미지를 분류하기 위한 컨볼루션 신경망을 만드는 방법을 보여줍니다. 또한 훈련 및 테스트 중에 다른 네트워크를 사용하는 방법을 보여줍니다.\n",
     "\n",
-    "이 튜토리얼은 이전 튜토리얼을 기반으로 하므로 TensorFlow 및 부가 기능 패키지 Pretty Tensor에 대한 기본적인 이해가 필요합니다. 이 자습서의 소스 코드 및 텍스트는 이전 글과 비슷하며 최근에 해당 글을 읽은 경우 빨리 읽을 수 있습니다.\n",
+    "이 튜토리얼은 이전 튜토리얼을 기반으로 하므로 TensorFlow 및 부가 기능 패키지 Pretty Tensor에 대한 기본적인 이해가 필요합니다. 이 튜토리얼의 소스 코드 및 텍스트는 이전 글과 비슷하며 최근에 해당 글을 읽은 경우 빨리 읽을 수 있습니다.\n",
     "\n",
     "역자주) CIFAR-10 및 CIFAR-100은 8천만 개의 작은 이미지 데이터 세트에서 추출된 이미지 세트 입니다. 이 이미지들은 캐나다 토론토 대학의 Alex Krizhevsky, Vinod Nair 및 Geoffrey Hinton에 의해 수집되었습니다.\n",
     "CIFAR-10 데이터 세트는 10 클래스의 60,000개의 32x32 컬러 이미지와 클래스 당 6,000 개의 이미지로 구성됩니다. 50,000개의 훈련용 이미지와 10,000 개의 테스트 이미지가 있습니다."
@@ -702,7 +702,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "distorted_images = pre_process(images=x, training=True)"
@@ -1003,13 +1005,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "이 도우미 함수를 사용하여 변수를 검색 할 수 있습니다. TensorFlow 개체입니다. 실제 변수의 내용을 얻으려면 저 아래에서 처럼 `content=session.run(weights_conv1)`을 하면 됩니다."
+    "이 도움 함수를 사용하여 변수를 검색 할 수 있습니다. TensorFlow 개체입니다. 실제 변수의 내용을 얻으려면 저 아래에서 처럼 `content=session.run(weights_conv1)`을 하면 됩니다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "weights_conv1 = get_weights_variable(layer_name='layer_conv1')\n",
@@ -1035,7 +1039,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_layer_output(layer_name):\n",
@@ -1059,7 +1065,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "output_conv1 = get_layer_output(layer_name='layer_conv1')\n",
@@ -1539,7 +1547,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def print_test_accuracy(show_example_errors=False,\n",
@@ -1824,6 +1834,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -2114,7 +2125,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "label_pred, cls_pred = session.run([y_pred, y_pred_cls],\n",
@@ -2217,7 +2230,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This has been commented out in case you want to modify and experiment\n",
