--- a/11_Adversarial_Examples.ipynb
+++ b/11_Adversarial_Examples.ipynb
@@ -200,7 +200,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = inception.Inception()"
@@ -241,7 +243,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y_pred = model.y_pred"
@@ -608,7 +612,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "이 함수는 위의 두 가지 도우미 함수를 결합합니다. 그것은 먼저 대립되는 노이즈를 찾은 다음 해당 노이즈를 이미지를 그립니다."
+    "이 함수는 위의 두 가지 도움 함수를 결합합니다. 그것은 먼저 대립되는 노이즈를 찾은 다음 해당 노이즈를 이미지를 그립니다."
    ]
   },
   {
