--- a/12_Adversarial_Noise_MNIST.ipynb
+++ b/12_Adversarial_Noise_MNIST.ipynb
@@ -568,7 +568,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x_noise = tf.Variable(tf.zeros([img_size, img_size, num_channels]),\n",
@@ -624,7 +626,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x_noisy_image = tf.clip_by_value(x_noisy_image, 0.0, 1.0)"
@@ -743,7 +747,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "optimizer = tf.train.AdamOptimizer(learning_rate=1e-4).minimize(loss)"
@@ -766,7 +772,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "adversary_variables = tf.get_collection(ADVERSARY_VARIABLES)"
@@ -849,7 +857,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "optimizer_adversary = tf.train.AdamOptimizer(learning_rate=1e-2).minimize(loss_adversary, var_list=adversary_variables)"
@@ -959,7 +969,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "session.run(tf.global_variables_initializer())"
@@ -994,7 +1006,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "init_noise()"
@@ -1033,13 +1047,15 @@
    "source": [
     "아래는 신경망의 변수를 점진적으로 개선하기 위해 여러 최적화 반복을 수행하는 기능입니다. 각 반복에서 학습 세트에서 새로운 데이터 배치를 선택한 다음 TensorFlow는 이러한 학습 샘플을 사용하여 최적화 프로그램을 실행합니다. 진행률은 매 100회 마다 표시됩니다.\n",
     "\n",
-    "이 함수는 이제 Adversarial 클래스를 인수를 취한다는 점을 제외하면 이전 자습서와 유사합니다. 이 target-class가 정수로 설정되면, training-data의 실제 class-number 대신에 사용됩니다. adverarial optimizer는 일반 옵티마이저 대신에 사용되며, adverarial optimizer의 각 단계 후에는 노이즈가 허용 범위로 제한/클리핑됩니다. 이것은 Adversarial Noise를 최적화하고 신경망의 다른 변수를 무시합니다."
+    "이 함수는 이제 Adversarial 클래스를 인수를 취한다는 점을 제외하면 이전 튜토리얼과 유사합니다. 이 target-class가 정수로 설정되면, training-data의 실제 class-number 대신에 사용됩니다. adverarial optimizer는 일반 옵티마이저 대신에 사용되며, adverarial optimizer의 각 단계 후에는 노이즈가 허용 범위로 제한/클리핑됩니다. 이것은 Adversarial Noise를 최적화하고 신경망의 다른 변수를 무시합니다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def optimize(num_iterations, adversary_target_cls=None):\n",
@@ -1149,7 +1165,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot_noise():\n",
@@ -1274,7 +1292,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Split the test-set into smaller batches of this size.\n",
@@ -1442,7 +1462,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "init_noise()"
@@ -1594,13 +1616,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "이것은 모든 대상 클래스에 대한 Adversarial Noise를 찾는 도우미 기능입니다. 이 함수는 모든 클래스 번호를 0에서 9까지 반복하고 위의 최적화를 실행합니다. 그 결과는 배열에 저장됩니다."
+    "이것은 모든 대상 클래스에 대한 Adversarial Noise를 찾는 도움 함수입니다. 이 함수는 모든 클래스 번호를 0에서 9까지 반복하고 위의 최적화를 실행합니다. 그 결과는 배열에 저장됩니다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def find_all_noise(num_iterations=1000):\n",
@@ -1733,7 +1757,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot_all_noise(all_noise):    \n",
@@ -2725,7 +2751,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "init_noise()"
@@ -2801,7 +2829,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This has been commented out in case you want to modify and experiment\n",
