--- a/16_Reinforcement_Learning.ipynb
+++ b/16_Reinforcement_Learning.ipynb
@@ -191,7 +191,7 @@
    "source": [
     "## 흐름도\n",
     "\n",
-    "이 순서도는 강화 학습이 이 자습서에서 어떻게 구현되는지 대략적으로 보여줍니다. 신경망이 Q-value를 추정하는데 충분히 정확할 때까지 순차적으로 실행되는 두 개의 주요 루프가 있습니다.\n",
+    "이 순서도는 강화 학습이 이 튜토리얼에서 어떻게 구현되는지 대략적으로 보여줍니다. 신경망이 Q-value를 추정하는데 충분히 정확할 때까지 순차적으로 실행되는 두 개의 주요 루프가 있습니다.\n",
     "\n",
     "첫 번째 루프는 게임을하고 데이터를 기록하기 위한 것입니다. 이것은 신경망을 사용하여 게임 상태에서 Q-value를 추정합니다. 그런 다음 나중에 사용하기 위해 Replay Memory에 해당 Q-value를 보상/패널티와 함께 게임 상태를 저장합니다.\n",
     "\n",
@@ -4171,7 +4171,7 @@
     "또한 우리는 신경망에서 컨볼루션 레이어의 가중치를 플로팅 할 수 있습니다. 이것은 신경망이 Q-value를 추정하는 능력을 향상시키기 위해 최적화되는 가중치입니다. 튜토리얼 #02에서는 컨볼루션의 가중치에 대해서 자세히 설명되어 있습니다.\n",
     "완전히 연결된 레이어의 가중치도 있지만 여기에는 표시되지 않습니다.\n",
     "\n",
-    "이것은 컨볼루션 레이어의 가중치를 플로팅하기 위한 도우미 기능입니다."
+    "이것은 컨볼루션 레이어의 가중치를 플로팅하기 위한 도움 함수입니다."
    ]
   },
   {
