--- a/18_TFRecords_Dataset_API.ipynb
+++ b/18_TFRecords_Dataset_API.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "대신 병렬 스레드에서 데이터를 읽어들여서 GPU가 준비 될 때마다 항상 새로운 교육 데이터를 사용할 수 있습니다. 이것은 매우 복잡한 시스템 인 TensorFlow의 QueueRunners라고 불리는 것으로 이루어졌습니다. 이 튜토리얼에서 설명한대로 Dataset API 및 TFRecords라는 파일 형식을 사용하여 수행 할 수 있습니다.\n",
     "\n",
-    "이것은 Estimator API에 대한 자습서 #17을 기반으로합니다."
+    "이것은 Estimator API에 대한 튜토리얼 #17을 기반으로합니다."
    ]
   },
   {
@@ -34,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -577,7 +579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TFRecords 파일에 저장할 수 있도록 정수를 래핑하는 도우미 함수입니다."
+    "TFRecords 파일에 저장할 수 있도록 정수를 래핑하는 도움 함수입니다."
    ]
   },
   {
@@ -596,7 +598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TFRecords 파일에 저장할 수 있도록 원시 바이트를 래핑하는 도우미 기능."
+    "TFRecords 파일에 저장할 수 있도록 원시 바이트를 래핑하는 도움 함수."
    ]
   },
   {
@@ -1837,7 +1839,7 @@
    "source": [
     "## 결론\n",
     "\n",
-    "이 자습서에서는 TensorFlow의 바이너리 파일 형식 TFRecords를 Dataset 및 Estimator API와 함께 사용하는 방법을 보여줍니다. 이렇게하면 GPU를 많이 사용하면서 매우 큰 데이터 세트로 모델을 학습하는 프로세스가 단순 해집니다. 그러나 API는 여러면에서 더 단순할 수 있었습니다."
+    "이 튜토리얼에서는 TensorFlow의 바이너리 파일 형식 TFRecords를 Dataset 및 Estimator API와 함께 사용하는 방법을 보여줍니다. 이렇게하면 GPU를 많이 사용하면서 매우 큰 데이터 세트로 모델을 학습하는 프로세스가 단순 해집니다. 그러나 API는 여러면에서 더 단순할 수 있었습니다."
    ]
   },
   {
