--- a/05_Ensemble_Learning.ipynb
+++ b/05_Ensemble_Learning.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "이 방법을 손으로 쓴 숫자를 인식하기 위해 MNIST 데이터 세트에서 사용합니다. 앙상블은 테스트 세트에서 분류 정확도를 약간 향상 시키지만 그 차이는 너무 작아 무작위 일 수 있습니다. 또한, 앙상블은 일부 개별 네트워크에 의해 정확하게 분류 된 일부 이미지를 잘못 분류합니다.\n",
     "\n",
-    "이 자습서는 이전 자습서를 토대로 작성 되었으므로 TensorFlow 및 추가 패키지 인 Pretty Tensor에 대한 기본적인 이해가 필요합니다. 여기에 있는 소스 코드와 텍스트는 이전 문서와 비슷하며 최근에 해당 문서를 보셨다면 빠르게 읽을 수 있습니다."
+    "이 튜토리얼은 이전 문서를 토대로 작성 되었으므로 TensorFlow 및 추가 패키지 인 Pretty Tensor에 대한 기본적인 이해가 필요합니다. 여기에 있는 소스 코드와 텍스트는 이전 문서와 비슷하며 최근에 해당 문서를 보셨다면 빠르게 읽을 수 있습니다."
    ]
   },
   {
