--- a/08_Transfer_Learning.ipynb
+++ b/08_Transfer_Learning.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "대신 사전 훈련 된 Inception 모델을 재사용하고 최종 분류를 수행하는 레이어를 대체 할 수 있습니다. 이를 전이 학습(Transfer Learning)이라고 합니다.\n",
     "\n",
-    "이 문서는 이전 문서를 기반으로 하므로 TensorFlow에서 신경망을 작성하고 학습하는 방법에 대한 초기 자습서뿐만 아니라 Inception 모델에 대한 튜토리얼 #07을 숙지해야합니다. 이 튜토리얼의 소스 코드의 일부는 `inception.py` 파일에 있습니다.\n",
+    "이 문서는 이전 문서를 기반으로 하므로 TensorFlow에서 신경망을 작성하고 학습하는 방법에 대한 초기 문서뿐만 아니라 Inception 모델에 대한 튜토리얼 #07을 숙지해야합니다. 이 튜토리얼의 소스 코드의 일부는 `inception.py` 파일에 있습니다.\n",
     "\n",
     "역자주) 여기서는 Transfer Learning을 다룹니다. Transfer Learning에 대해서 이해를 하려면 다음을 참조하세요. \n",
     "http://jsideas.net/python/2017/05/07/transfer_learning.html"
@@ -2103,7 +2103,7 @@
    "source": [
     "## 결론\n",
     "\n",
-    "이전 자습서 #06에서는 노트북 PC에서 CIFAR-10 데이터 세트를 테스트 세트로 약 80%의 정확도로 분류하기 위해 신경망을 학습하는 데 15시간이 걸렸습니다.\n",
+    "이전 튜토리얼 #06에서는 노트북 PC에서 CIFAR-10 데이터 세트를 테스트 세트로 약 80%의 정확도로 분류하기 위해 신경망을 학습하는 데 15시간이 걸렸습니다.\n",
     "\n",
     "이 튜토리얼에서는 튜토리얼 #07의 Inception 모델을 사용하여 CIFAR-10 데이터 세트에서 약 90%의 분류 정확도를 달성했습니다. 이는 CIFAR-10 데이터 세트의 모든 이미지를 초기 모델을 통해 전달하고 최종 분류 레이어 이전에 소위 Transfer Value를 캐싱하여 수행되었습니다. 그런 다음 이러한 Transfer Value를 입력으로 사용하여 CIFAR-10 클래스를 출력으로 생성하는 또 다른 신경 네트워크를 구축했습니다.\n",
     "\n",
