--- a/09_Video_Data.ipynb
+++ b/09_Video_Data.ipynb
@@ -21,9 +21,9 @@
     "\n",
     "데모 용으로 수천 개의 칼날, 숟가락 및 포크 이미지가 포함 된 새로운 데이터 세트 [Knifey-Spoony](https://github.com/Hvass-Labs/knifey-spoony)를 사용합니다. 학습 세트는 4170 개의 이미지를 포함하고 테스트 세트는 530 개의 이미지가 있습니다. 클래스 이름은 The Simpsons를 참고하여 knifey, spoony 및 forky로 사용합니다.\n",
     "\n",
-    "knifey-spoony 데이터 세트의 이미지는 작은 파이썬[스크립트](https://github.com/Hvass-Labs/TensorFlow-Tutorials/blob/master/convert.py)을 사용하여 비디오 파일에서 만들어졌습니다. 리눅스에서 실행됩니다 (비디오에서 이미지로의 변환을 위해서는`avconv` 프로그램이 필요합니다). 따라서 단 몇 분의 비디오 녹화로 수천 개의 이미지가 포함 된 매우 큰 데이터 세트를 쉽게 만들 수 있습니다.\n",
+    "knifey-spoony 데이터 세트의 이미지는 작은 파이썬 [스크립트](https://github.com/Hvass-Labs/TensorFlow-Tutorials/blob/master/convert.py)을 사용하여 비디오 파일에서 만들어졌습니다. 리눅스에서 실행됩니다 (비디오에서 이미지로의 변환을 위해서는`avconv` 프로그램이 필요합니다). 따라서 단 몇 분의 비디오 녹화로 수천 개의 이미지가 포함 된 매우 큰 데이터 세트를 쉽게 만들 수 있습니다.\n",
     "\n",
-    "이 문서는 이전 문서를 기반으로 하므로 TensorFlow로 신경망을 작성하고 학스하는 방법에 대한 이전 문서뿐만 아니라 Transfer Learning에 대한 문서 #08을 숙지해야 합니다."
+    "이 문서는 이전 문서를 기반으로 하므로 TensorFlow로 신경망을 작성하고 학습하는 방법에 대한 이전 문서뿐만 아니라 Transfer Learning에 대한 문서 #08을 숙지해야 합니다."
    ]
   },
   {
